argocd/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paas-demo-app
  namespace: example-paas-dev
  labels:
    app: paas-demo-app
    app.kubernetes.io/name: paas-demo-app
    app.kubernetes.io/component: frontend
spec:
  selector:
    app: paas-demo-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
